// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should exclude variable columns using the variable prefix 1`] = `
Object {
  "body": Array [
    Array [
      "bar",
      "foo",
      "12",
    ],
    Array [
      "abc",
      "xyz",
      "",
    ],
  ],
  "head": Array [
    Object {
      "id": "processDefinitionId",
      "label": "Process Definition Id",
      "title": "Process Definition Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process Instance Id",
      "title": "Process Instance Id",
    },
    Object {
      "id": "variable:var1",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var1
      </React.Fragment>,
      "title": "var1",
      "type": "variables",
    },
  ],
}
`;

exports[`should show default instances column headers for empty results 1`] = `
Object {
  "body": Array [],
  "head": Array [
    Object {
      "id": "processDefinitionId",
      "label": "Process Definition Id",
      "title": "Process Definition Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process Instance Id",
      "title": "Process Instance Id",
    },
  ],
}
`;

exports[`should transform data to table compatible format 1`] = `
Object {
  "body": Array [
    Array [
      "bar",
      "foo",
      "12",
      "",
    ],
    Array [
      "abc",
      "xyz",
      "",
      "true",
    ],
  ],
  "head": Array [
    Object {
      "id": "processDefinitionId",
      "label": "Process Definition Id",
      "title": "Process Definition Id",
    },
    Object {
      "id": "processInstanceId",
      "label": "Process Instance Id",
      "title": "Process Instance Id",
    },
    Object {
      "id": "variable:var1",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var1
      </React.Fragment>,
      "title": "var1",
      "type": "variables",
    },
    Object {
      "id": "variable:var2",
      "label": <React.Fragment>
        <span
          className="variableExtension"
        >
          Var
          : 
        </span>
        var2
      </React.Fragment>,
      "title": "var2",
      "type": "variables",
    },
  ],
}
`;
